tests/evaluator/should_pass/link_par.csp
channel c

procTest1 = STOP [c <-> c] STOP
