tests/evaluator/should_fail/link_parallel_ambiguity.csp
channel c, d : Bool

procTest1 = STOP [c.true <-> d.true, c.true <-> d.false] STOP

assert procTest1 :[deadlock free]